# djkhaled

./: .gitignore  README.md  config.example.toml  pyproject.toml
djkhaled/: __main__.py  config.py  consts.py  embeds.py  state.py  utils.py
djkhaled/cogs/: debug.py  ping.py  play.py  queue.py  remove.py  seek.py  skip.py  stop.py  streaming.py
