[project]
name = "djkhaled"
version = "0.1.0"
description = "A music bot for Discord"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py[voice]==2.4.0",
    "pydantic>=2.10.5",
    "yt-dlp>=2025.1.15",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]

[project.scripts]
djkhaled = "djkhaled.__main__:app"

[tool.mypy]
strict = true
pretty = true
enable_error_code = ["ignore-without-code"]

[tool.ruff]
line-length = 120
